# GT-MindCraft-Embedded

./: README.md
chatbot/: README.md
chatbot/ESP32 IDF Project/: CMakeLists.txt  partitions-16MiB.csv  sdkconfig
chatbot/ESP32 IDF Project/components/GT/: CMakeLists.txt
chatbot/ESP32 IDF Project/main/: CMakeLists.txt  main.c
chatbot/ESP32 IDF Project/main/samples/: hilexin.pcm
chatbot/ESP32 IDF Project/wakenet/: wakenet环境配置.md
chatbot/hmi-project/: AI机器人.gtui
chatbot/hmi-project/board/: gt_port_vf.c  imgs.conf
chatbot/hmi-project/screen/: gt_init_Clear_page.c  gt_init_Connection_failed.c  gt_init_History_page.c  gt_init_Main_Interface.c  gt_init_Setting_List.c  gt_init_Volumeandbrightnesslab1.c  gt_init_Wi_Fi_List.c  gt_init_forget_the_password.c  gt_init_keyboard.c  gt_init_screen_fail.c  gt_init_screen_gl.c  gt_init_screen_home.c  gt_init_screen_jz.c  gt_init_screen_nc.c  gt_init_screen_recording.c  gt_init_screen_setup.c  gt_init_screen_subtitle.c  gt_init_screen_ys.c  gt_ui.h
chatbot/hmi-project/sources/fonts/: libBuilding.conf
chatbot/hmi-project/sources/imgsCode/: gt_src.c  gt_src.h  img_src_120.c  img_src_130.c  img_src_140.c  img_src_150.c  img_src_160.c  img_src_170.c  img_src_180.c  img_src_190.c  img_src_220.c  img_src_230.c  img_src_240.c  img_src_250.c
chatbot/hmi-project/sources/ui/: gt_init_Clear_page.c  gt_init_Connection_failed.c  gt_init_History_page.c  gt_init_Main_Interface.c  gt_init_Setting_List.c  gt_init_Volumeandbrightnesslab1.c  gt_init_Wi_Fi_List.c  gt_init_forget_the_password.c  gt_init_keyboard.c  gt_init_screen_fail.c  (+7 more)
(+51 files in other folders)
